--- a/events_bulletin/package.json
+++ b/events_bulletin/package.json
@@ -21,8 +21,12 @@
     "nodemon": "^2.0.22",
     "pg": "^8.11.1",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-native": "^0.72.3",
+    "react-native-web": "^0.19.6",
     "react-scripts": "5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "styled-components": "^6.0.2",
